Fixed a number of ParliamentServer problems